--- a/gitops/argo-apps/base/monitoring-pre.yaml
+++ b/gitops/argo-apps/base/monitoring-pre.yaml
@@ -62,3 +62,6 @@ spec:
 
         - name: "cluster_domain"
           value: "${ARGOCD_ENV_monitoring_pre_cluster_domain}"
+
+        - name: "dns_hyphenated_subdomain"
+          value: "${ARGOCD_ENV_monitoring_monitoring_hyphenated_subdomain}"
