--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -274,3 +274,6 @@ spec:
 
         - name: "cluster_domain"
           value: "${ARGOCD_ENV_monitoring_monitoring_cluster_domain}"
+
+        - name: "dns_hyphenated_subdomain"
+          value: "${ARGOCD_ENV_monitoring_monitoring_hyphenated_subdomain}"
