--- a/gitops/applications/base/istio-gw/namespaces.yaml
+++ b/gitops/applications/base/istio-gw/namespaces.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: ${ARGOCD_ENV_istio_internal_gateway_namespace}
+  labels:
+    opt-out-mesh: "true"
 ---
 apiVersion: v1
 kind: Namespace
