--- a/gitops/argo-apps/base/nexus.yaml
+++ b/gitops/argo-apps/base/nexus.yaml
@@ -58,7 +58,7 @@ spec:
           value: "${ARGOCD_ENV_nexus_nexus_dns_subdomain}"
 
         - name: "nexus_storage_size"
-          value: "${ARGOCD_ENV_nexus_nexus_storage_size}" 
+          value: "${ARGOCD_ENV_nexus_nexus_storage_size}"
 
         - name: "nexus_cpu_limit"
           value: "${ARGOCD_ENV_nexus_nexus_cpu_limit}"
@@ -70,7 +70,19 @@ spec:
           value: "${ARGOCD_ENV_nexus_nexus_cpu_request}"
 
         - name: "nexus_memory_request"
-          value: "${ARGOCD_ENV_nexus_nexus_memory_request}" 
+          value: "${ARGOCD_ENV_nexus_nexus_memory_request}"
 
         - name: "nexus_image_version"
           value: "${ARGOCD_ENV_nexus_nexus_image_version}"
+
+        - name: "nexus_jvm_min_heap_size"
+          value: "${ARGOCD_ENV_nexus_nexus_jvm_min_heap_size}"
+
+        - name: "nexus_jvm_max_heap_size"
+          value: "${ARGOCD_ENV_nexus_nexus_jvm_max_heap_size}"
+
+        - name: "nexus_jvm_additional_memory_options"
+          value: "${ARGOCD_ENV_nexus_nexus_jvm_additional_memory_options}"
+
+        - name: "nexus_jvm_additional_options"
+          value: "${ARGOCD_ENV_nexus_nexus_jvm_additional_options}"
