--- a/gitops/applications/overlays/mongodb_provider/documentdb/deploy-env-onboard/docdbcluster.yaml
+++ b/gitops/applications/overlays/mongodb_provider/documentdb/deploy-env-onboard/docdbcluster.yaml
@@ -39,6 +39,7 @@ spec:
     storageEncrypted: ${ARGOCD_ENV_storage_encrypted}
     storageType: "${ARGOCD_ENV_storage_type}"
     subnets: ${ARGOCD_ENV_subnet_list}
+    azs: ${ARGOCD_ENV_azs}
     username: ${ARGOCD_ENV_db_username}
     vpcCidr: ${ARGOCD_ENV_vpc_cidr}
     vpcId: ${ARGOCD_ENV_vpc_id}
