--- a/gitops/applications/overlays/rdbms_provider/rds/db/rdscluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/db/rdscluster.yaml
@@ -37,6 +37,7 @@ spec:
     storageType: "${ARGOCD_ENV_storage_type}"
     allocatedStorage: ${ARGOCD_ENV_rds_postgres_storage_size}
     subnets: ${ARGOCD_ENV_subnet_list}
+    azs: ${ARGOCD_ENV_azs}
     username: ${ARGOCD_ENV_db_username}
     vpcCidr: ${ARGOCD_ENV_vpc_cidr}
     vpcId: ${ARGOCD_ENV_vpc_id}
