--- a/gitops/argo-apps/base/netbird-pre.yaml
+++ b/gitops/argo-apps/base/netbird-pre.yaml
@@ -201,6 +201,9 @@ spec:
           - name: "subnet_list"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_rdbms_subnet_list}"
 
+          - name: "azs"
+            value: "${ARGOCD_ENV_security_netbird_rds_provider_rdbms_azs}"
+
           - name: "cloud_region"
             value: "${ARGOCD_ENV_security_netbird_rds_provider_db_provider_cloud_region}"
 
