--- a/gitops/argo-apps/base/zitadel-pre.yaml
+++ b/gitops/argo-apps/base/zitadel-pre.yaml
@@ -160,6 +160,9 @@ spec:
           - name: "subnet_list"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_rdbms_subnet_list}"
 
+          - name: "azs"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_rdbms_azs}"
+
           - name: "cloud_region"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_db_provider_cloud_region}"
 
