--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -122,8 +122,8 @@ crossplane_packages_sc_bootstrap_version: "v0.4.0"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0"
 crossplane_packages_nb_config_version: "v0.1.4"
 crossplane_packages_k8s_config_version: "v0.1.0"
-crossplane_packages_aws_documentdb_version: "v0.4.0"
-crossplane_packages_aws_rds_version: "v0.2.0"
+crossplane_packages_aws_documentdb_version: "v0.4.0-pr94-15916516248"
+crossplane_packages_aws_rds_version: "v0.2.0-pr94-15916516248"
 crossplane_packages_argocd_config_version: "v0.1.0"
 crossplane_packages_zitadel_config_version: "v0.1.0"
 velero_helm_version: "10.0.1"
