fix: add bucket var into deploy on board

--- a/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
+++ b/gitops/applications/base/deploy-env-onboard/env-onboard-xplane-terraform.yaml
@@ -25,6 +25,8 @@ spec:
         value: "grafana.${ARGOCD_ENV_grafana_domain}.${ARGOCD_ENV_domain}"
       - key: env_name
         value: "${ARGOCD_ENV_env_name}"
+      - key: hyphenated_domain
+        value: "${ARGOCD_ENV_hyphenated_domain}"
       - key: env_cidr
         value: "${ARGOCD_ENV_env_cidr}"
       - key: kv_path
