--- a/terraform/k8s/default-config/cluster-config.yaml
+++ b/terraform/k8s/default-config/cluster-config.yaml
@@ -62,6 +62,7 @@ managed_svc_as_monolith: false
 manage_parent_domain: true
 object_storage_provider: s3
 db_mediated_by_control_center: false
+deploy_env_monolithic_db: true
 single_zone_az_nodegroup: true
 az_count: 3
 enable_eks_controlplane_logging: false
