--- a/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
+++ b/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
@@ -90,3 +90,14 @@ spec:
       dashboards: "grafana"
   url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/networking-cost-estimation.json"
 ---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: "kubernetes-capacity-planning"
+spec:
+  folder: infra
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/kubernetes-capacity-planning.json"
+---
