add sc-monitoring.yaml to root kustomization

--- a/gitops/applications/base/sc-monitoring/kustomization.yaml
+++ b/gitops/applications/base/sc-monitoring/kustomization.yaml
@@ -5,7 +5,7 @@ helmCharts:
   - name: kube-prometheus
     releaseName: prom
     # version: ${ARGOCD_ENV_kube_prometheus_helm_version}
-    version: ${ARGOCD_ENV_kube_prometheus_helm_version}
+    version: 9.5.10
     repo: oci://registry-1.docker.io/bitnamicharts
     # valuesFile: values-kube-prometheus.yaml
     # namespace: ${ARGOCD_ENV_monitoring_namespace}
