--- a/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
@@ -11,3 +11,4 @@ resources:
   - ../../../base/percona-operator.yaml
   - ../../../base/base-monitoring.yaml
   - ../../../base/kyverno.yaml
+  - ../../../base/sc-monitoring.yaml
