--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -60,6 +60,12 @@ aws_ebs_csi_driver_helm_version: "2.39.0"
 aws_ebs_csi_driver_replicas: 2
 rook_ceph_helm_version: "1.17.1"
 crossplane_helm_version: "1.19.0"
+crossplane_providers_aws_family_version: "1.21.1"
+crossplane_providers_aws_iam_version: "1.21.0"
+crossplane_providers_aws_docdb_version: "1.21.0"
+crossplane_providers_aws_rds_version: "1.21.0"
+crossplane_providers_aws_route53_version: "1.21.0"
+crossplane_providers_aws_aws_ec2_version: "1.21.0"
 crossplane_providers_k8s_version: "0.11.4"
 crossplane_providers_vault_version: "2.1.1"
 crossplane_functions_patch_and_transform_version: "0.8.2"
